tests/unit/compile/cases/syntax-errors/12.html-tag-mismatch-case.t
Lorem <div> ipsum <Div> dolor </div> sit </Div> amet
---- THROW% ----
Unexpected closing tag `</div>` instead of expected `</Div>` near `> sit </Div> amet`
